--- a/public/assests/css/cardSlider.styles.css
+++ b/public/assests/css/cardSlider.styles.css
@@ -88,7 +88,7 @@
 }
 @media screen and (max-width: 600px) {
     .card-slider .carousel{
-        grid-auto-columns: calc((100%));
+        grid-auto-columns: calc(100% - 8px);
 }
 .card-slider ul{
     padding-left: 0;
