--- a/public/assests/css/displayGig.styles.css
+++ b/public/assests/css/displayGig.styles.css
@@ -18,7 +18,7 @@ body{
 
 
 /* category */
-.category{
+.displayGigContainer .category{
     width: fit-content;
     display: flex;
     align-items: center;
@@ -171,14 +171,18 @@ body{
 }
 
 /* top container */
- .displayGigContainer .topContainer{
+ .displayGigContainer .topContainer, .bottomContainer{
     display: flex;
     width: 100%;
     margin-bottom: 32px;
+    gap: 128px;
 }
 
 /* top left container */
-.displayGigContainer .topLeftContainer,.topRightContainer{
+.displayGigContainer .topLeftContainer{
+    width: 50%;
+}
+.displayGigContainer .topRightContainer{
     width: 50%;
 }
 .topLeftContainer h1{
@@ -206,12 +210,14 @@ body{
 }
 .topLeftContainer .sliderContainer{
     width: 100%;
+    height: 445px;
 }
 .topLeftContainer .sliderContainer img{
     width: 100%;
+    height: 445px;
 }
 .topLeftContainer .navigationArrows{
-    top: 46%;
+    top: 44%;
     position: absolute;
     width: 100%;
     display: flex;
@@ -270,10 +276,10 @@ body{
 .topRightContainer{
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-end;
 }
 .topRightContainer .packageDetails{
-    width: 80%;
+    width: 100%;
     margin-left: 16px;
 }
 .tab {
@@ -370,8 +376,7 @@ ul button:hover{
 /* milestones */
 .topRightContainer .milestoneApproach{
     margin-top: 48px;
-    width: 80%;
-    margin-left: 16px;
+    width: 100%;
 }
 .topRightContainer .milestoneApproach button{
     display: flex;
@@ -385,6 +390,7 @@ ul button:hover{
     cursor: pointer;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    margin-top: 16px;
 }
 .topRightContainer .milestoneApproach button:hover{
     box-shadow: 0 16px 32px 0 rgba(0,0,0,0.4);
@@ -419,43 +425,24 @@ ul button:hover{
     font-family: Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
 }
 .bottomLeftContainer .aboutGig .content p{
+    margin-top: -1em;
     white-space: pre-wrap;
     text-align: justify;
     margin-bottom: 32px;
+}
+.bottomLeftContainer .aboutGig .content p:first-line{
+    line-height: 0px;
 }
 /* Bottom Right Container */
 
 /* media queries */
 @media only screen and (max-width: 900px) {
-    .topContainer{
+    .displayGigContainer .topContainer, .bottomContainer{
         display: flex;
         flex-direction: column;
+        gap: 16px;
     }
-    .displayGigContainer .topLeftContainer, .topRightContainer{
-        width: 100%;
-    }
-    .modal{
-        width: 85%;
-    }
-    .topRightContainer .packageDetails{
-        width:100%;
-        margin-left: 0;
-    }
-    .topRightContainer .milestoneApproach{
-        width: 100%;
-        margin-left: 0;
-    }
-    .bottomContainer .bottomLeftContainer, .bottomContainer .bottomRightContainer{
-        width: 100%;
-    }
-}
-
-@media only screen and (max-width: 600px) {
-    .topContainer{
-        display: flex;
-        flex-direction: column;
-    }
-    .displayGigContainer .topLeftContainer, .topRightContainer{
+    .displayGigContainer .topLeftContainer, .displayGigContainer .topRightContainer{
         width: 100%;
     }
     .tab button {
@@ -479,5 +466,54 @@ ul button:hover{
     }
     .bottomContainer .bottomLeftContainer, .bottomContainer .bottomRightContainer{
         width: 100%;
+    }
+    .topLeftContainer .sliderContainer{
+        width: 100%;
+        height: auto;
+    }
+    .topLeftContainer .sliderContainer img{
+        width: 100%;
+        height: auto;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .displayGigContainer .topContainer, .bottomContainer{
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+    .displayGigContainer .topLeftContainer, .displayGigContainer .topRightContainer{
+        width: 100%;
+    }
+    .tab button {
+        padding: 8px 16px;
+        font-size: 12px;
+    }
+    ul button{
+        padding: 8px 16px;
+        font-size: 12px;
+    }
+    .modal{
+        width: 85%;
+    }
+    .topRightContainer .packageDetails{
+        width:100%;
+        margin-left: 0;
+    }
+    .topRightContainer .milestoneApproach{
+        width: 100%;
+        margin-left: 0;
+    }
+    .bottomContainer .bottomLeftContainer, .bottomContainer .bottomRightContainer{
+        width: 100%;
+    }
+    .topLeftContainer .sliderContainer{
+        width: 100%;
+        height: auto;
+    }
+    .topLeftContainer .sliderContainer img{
+        width: 100%;
+        height: auto;
     }
 }
