add milestone ui structure done

--- a/public/assests/css/displayGig.styles.css
+++ b/public/assests/css/displayGig.styles.css
@@ -48,7 +48,7 @@ body{
     align-items: center;
 
 }
-#overlay{
+#overlay, #milestoneOverlay{
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
     animation-name: animatetop;
@@ -137,6 +137,40 @@ body{
     background-color: rgb(241, 241, 241);
     font-weight: 500;
 }
+
+/* collapsible */
+.collapsible {
+    background-color: #777;
+    color: white;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+  }
+.collapsibleActive, .collapsible:hover {
+    background-color: #555;
+}
+.collapsible:after {
+    content: '\002B';
+    color: white;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+}
+.collapsibleActive:after {
+    content: "\2212";
+}
+.collapsibleContent {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    background-color: #f1f1f1;
+}
+
 
 /* file attachement stylings */
 .fileInput{
@@ -433,6 +467,7 @@ ul button:hover{
 .bottomLeftContainer .aboutGig .content p:first-line{
     line-height: 0px;
 }
+
 /* Bottom Right Container */
 
 /* media queries */
