--- a/public/assests/css/displayGig.styles.css
+++ b/public/assests/css/displayGig.styles.css
@@ -149,10 +149,12 @@ body{
     text-align: left;
     outline: none;
     font-size: 15px;
-  }
-.collapsibleActive, .collapsible:hover {
+}
+
+.active, .collapsible:hover {
     background-color: #555;
 }
+
 .collapsible:after {
     content: '\002B';
     color: white;
@@ -160,17 +162,18 @@ body{
     float: right;
     margin-left: 5px;
 }
-.collapsibleActive:after {
+
+.active:after {
     content: "\2212";
 }
-.collapsibleContent {
+
+.content {
     padding: 0 18px;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
     background-color: #f1f1f1;
 }
-
 
 /* file attachement stylings */
 .fileInput{
