--- a/public/assests/css/displayGig.styles.css
+++ b/public/assests/css/displayGig.styles.css
@@ -119,7 +119,7 @@ body{
     align-items: center;
     gap: 16px;
 }
-.modal button, .confirmation button{
+.modal .buttons button, .confirmation button{
     width: 50%;
     padding: 8px;
     margin-top: 16px;
@@ -137,24 +137,36 @@ body{
     background-color: rgb(241, 241, 241);
     font-weight: 500;
 }
+.createNewMileStone{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    padding: 8px;
+    width: 100%;
+    border: 1px solid #000000;
+    border-radius: 4px;
+    font: 400 16px/24px Macan,Helvetica Neue,Helvetica,Arial,sans-serif;
+}
 
 /* collapsible */
 .collapsible {
-    background-color: #777;
     color: white;
     cursor: pointer;
-    padding: 18px;
     width: 100%;
     border: none;
     text-align: left;
     outline: none;
-    font-size: 15px;
+    margin: 8px 0;
 }
-
+.collapsible .row{
+    display: flex;
+    flex-direction: row !important;
+}
 .active, .collapsible:hover {
     background-color: #555;
 }
-
 .collapsible:after {
     content: '\002B';
     color: white;
@@ -162,11 +174,9 @@ body{
     float: right;
     margin-left: 5px;
 }
-
 .active:after {
     content: "\2212";
 }
-
 .content {
     padding: 0 18px;
     max-height: 0;
@@ -377,7 +387,7 @@ body{
 .columns .price li {
     text-align: center;
 }
-.button {
+.buttons .button {
     background-color: #1dbf73;
     width: 100%;
     border: none;
