--- a/public/assests/css/sellerProfile.styles.css
+++ b/public/assests/css/sellerProfile.styles.css
@@ -35,15 +35,6 @@ body{
 
 .buttons{
     padding: 15px;
-    /* display: flex;
-    justify-content:center;
-    align-items: end;
-    background-color:#32bd6e;
-    color: white;
-    border: 0;
-    border-radius: 15px;
-    padding: 10px;
-    margin: 10px; */
 }
 
 #button:hover{
@@ -461,4 +452,16 @@ a{
         display: flex;
         flex-direction: column;
     }
+}
+
+/* Earnings stuff */
+
+.earningsHeading{
+    /* display: flex; */
+    justify-content:center;
+    align-items: center;
+    /* border: 1px solid #c5c6c9; */
+    padding: 16px;
+    font-size: 16px;
+    border-radius:15px ;
 }
