--- a/public/assests/css/displayGig.styles.css
+++ b/public/assests/css/displayGig.styles.css
@@ -415,10 +415,10 @@ textarea {
     text-decoration: none;
     font-size: 18px;
 }
-ul{
+.topRightContainer ul{
     border-radius: 0 0 8px 8px;
 }
-ul button{
+.topRightContainer .ul button{
     padding: 8px;
     margin-top: 16px;
     width: 100%;
