order page updates

--- a/public/assests/css/displayGig.styles.css
+++ b/public/assests/css/displayGig.styles.css
@@ -418,7 +418,7 @@ textarea {
 .topRightContainer ul{
     border-radius: 0 0 8px 8px;
 }
-.topRightContainer .ul button{
+.topRightContainer ul button{
     padding: 8px;
     margin-top: 16px;
     width: 100%;
